force-app/main/default/objects/Account/fields/Expire__c.field-meta.xml
<CustomField>
    <fullName>Expire__c</fullName>
    <label>Expire</label>
    <type>Date</type>
</CustomField>