force-app/main/default/objects/Account/fields/Internal_Article__c.field-meta.xml
<CustomField>
    <fullName>Internal_Article__c</fullName>
    <label>Internal Article</label>
    <length>2000</length>
    <type>Html</type>
</CustomField>