force-app/main/default/objects/Account/fields/IsLWCUpdate__c.field-meta.xml
<CustomField>
    <fullName>IsLWCUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsLWCUpdate</label>
    <type>Checkbox</type>
</CustomField>