force-app/main/default/objects/Account/fields/LCR__c.field-meta.xml
<CustomField>
    <fullName>LCR__c</fullName>
    <label>LCR</label>
    <type>Date</type>
</CustomField>