force-app/main/default/objects/Account/fields/MultiBoxShowHide__c.field-meta.xml
<CustomField>
    <fullName>MultiBoxShowHide__c</fullName>
    <defaultValue>true</defaultValue>
    <label>MultiBoxShowHide</label>
    <type>Checkbox</type>
</CustomField>