force-app/main/default/objects/Account/fields/myStaticMessge__c.field-meta.xml
<CustomField>
    <fullName>myStaticMessge__c</fullName>
    <description>This is a static message!</description>
    <inlineHelpText>This is a static message!</inlineHelpText>
    <label>myStaticMessge</label>
    <type>Url</type>
</CustomField>