force-app/main/default/objects/Account/fields/Responsible_Team__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Team__c</fullName>
    <label>Responsible Team</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Team 1</fullName>
            </value>
            <value>
                <fullName>Team 2</fullName>
            </value>
            <value>
                <fullName>Team 3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>