force-app/main/default/objects/Account/fields/Selected_Records__c.field-meta.xml
<CustomField>
    <fullName>Selected_Records__c</fullName>
    <label>Selected Records</label>
    <length>255</length>
    <type>Text</type>
</CustomField>