force-app/main/default/objects/Account/fields/Series__c.field-meta.xml
<CustomField>
    <fullName>Series__c</fullName>
    <label>Series</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Accessrioes__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Realme 12 Pro</fullName>
            </value>
            <value>
                <fullName>Realme 12 Pro Plus</fullName>
            </value>
            <value>
                <fullName>Realme 12 Pro Plus Max</fullName>
            </value>
            <value>
                <fullName>Samsung Table 1</fullName>
            </value>
            <value>
                <fullName>Samsung Table 2</fullName>
            </value>
            <value>
                <fullName>Samsung Table 3</fullName>
            </value>
            <value>
                <fullName>Samsung Table 4</fullName>
            </value>
            <value>
                <fullName>Dell</fullName>
            </value>
            <value>
                <fullName>Lanovo</fullName>
            </value>
            <value>
                <fullName>Hp</fullName>
            </value>
            <value>
                <fullName>Acer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>