force-app/main/default/objects/Account/fields/Service_Order_Template__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Template__c</fullName>
    <label>Service Order Template</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Order 1</fullName>
            </value>
            <value>
                <fullName>Order 2</fullName>
            </value>
            <value>
                <fullName>Order 3</fullName>
            </value>
            <value>
                <fullName>Order 4</fullName>
            </value>
            <value>
                <fullName>Order 5</fullName>
            </value>
            <value>
                <fullName>Order 6</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>