force-app/main/default/objects/Account/fields/Service_Order_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Template_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Order Template Name</label>
    <referenceTo>Service_Order_Template__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>