force-app/main/default/objects/Account/fields/Service_Order_Template_Names__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Template_Names__c</fullName>
    <label>Service_Order_Template_Names</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>