force-app/main/default/objects/Account/fields/Service_Order_Templates__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Templates__c</fullName>
    <label>Service Order Templates</label>
    <length>100000</length>
    <type>LongTextArea</type>
</CustomField>