force-app/main/default/objects/Account/fields/ServiceCheck__c.field-meta.xml
<CustomField>
    <fullName>ServiceCheck__c</fullName>
    <defaultValue>true</defaultValue>
    <label>ServiceCheck</label>
    <type>Checkbox</type>
</CustomField>