force-app/main/default/objects/Account/recordTypes/SOP.recordType-meta.xml
<RecordType>
    <fullName>SOP</fullName>
    <active>true</active>
    <description>SOP Layout</description>
    <label>SOP</label>
</RecordType>